# rpq9MultiSoftModDeformer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  quick_install.py  reference.md
cmake/: embedKernel.cmake  embedMel.cmake
package/: rpq9MultiSoftModDeformer.mod
package/rpq9MultiSoftModDeformer/plug-ins/windows/2025/: rpq9MultiSoftModDeformer.mll
package/rpq9MultiSoftModDeformer/plug-ins/windows/2026/: rpq9MultiSoftModDeformer.mll
package/rpq9MultiSoftModDeformer/scripts/rpq9MultiSoftMod/: command.py  constants.py  core.py  deformerWeight.py  deformerWeightUI.py  jsonIO.py  model.py  sample.py  utils.py
plug-ins/windows/2025/: rpq9MultiSoftModDeformer.mll
plug-ins/windows/2026/: rpq9MultiSoftModDeformer.mll
scripts/rpq9MultiSoftMod/: __init__.py  controller.py  core.py  deformerWeight.py  deformerWeightUI.py  jsonIO.py  model.py  sample.py  utils.py
src/: AErpq9MultiSoftModTemplate.mel  nodeRegisterData.h  rpq9MultiSoftModDeformerKernels.cl  rpq9MultiSoftModDeformerNode.cpp  rpq9MultiSoftModDeformerNode.h  rpq9MultiSoftModDeformerPlugin.cpp
tests/: test_rpq9MultiSoftMod.py
